...
        "3. Сетевые данные и назначение" to R.string.ui_3_setevye_dannye_i_naznachenie_f6612df0,
        "30 дней" to R.string.ui_30_dney_fb925c5d,
        "4. Передача третьим сторонам" to R.string.ui_4_peredacha_tretim_storonam_e8e14fa8,
        "5. Хранение и защита" to R.string.ui_5_hranenie_i_zaschita_809e8f38,
        "6. Управление данными" to R.string.ui_6_upravlenie_dannymi_8a364d27,
...
        "Добавить ignore" to R.string.ui_dobavit_ignore_245155c7,
        "Добавить в split" to R.string.ui_dobavit_v_split_542e7a32,
        "Добавить канал" to R.string.ui_dobavit_kanal_af27857c,
        "Добавленных каналов пока нет" to R.string.ui_dobavlennyh_kanalov_poka_net_7552699d,
        "Добавлять в Mentions" to R.string.ui_dobavlyat_v_mentions_4535ecf7,
...
        "Маленький Twitch-аватар на одной линии с badges и ником." to R.string.ui_malenkiy_twitch_avatar_na_odnoy_linii_s_badges_i_nik_c31121c7,
        "МБ" to R.string.ui_mb_6eaae42a,
        "Меню" to R.string.ui_menyu_dd904beb,
        "Минимальный срок подписки, минут" to R.string.ui_minimalnyy_srok_podpiski_minut_8c3245b0,
        "Модератор" to R.string.ui_moderator_2d2d6666,
...
        "Награды дороже 1000" to R.string.ui_nagrady_dorozhe_1000_48dafa1d,
        "Награды и подписки" to R.string.ui_nagrady_i_podpiski_f5414c1d,
        "Назад" to R.string.ui_nazad_f6dab074,
        "Назад к чатам" to R.string.ui_nazad_k_chatam_05c2b756,
        "Название" to R.string.ui_nazvanie_3de49828,
...
        "например, 30s или 6h" to R.string.ui_naprimer_30s_ili_6h_c1c11180,
        "например, twitchdev" to R.string.ui_naprimer_twitchdev_ceee38ea,
        "Настройки" to R.string.ui_nastroyki_7f17c7c6,
        "Настройки батареи" to R.string.ui_nastroyki_batarei_435b2e34,
        "Настройки изменены и на этом, и на другом устройстве" to R.string.ui_nastroyki_izmeneny_i_na_etom_i_na_drugom_ustroystve_d7401a85,
        "Настройки импортированы" to R.string.ui_nastroyki_importirovany_93074d3f,
        "Настройки обновлены с другого устройства" to R.string.ui_nastroyki_obnovleny_s_drugogo_ustroystva_00b0b231,
        "Настройки уведомлений Android" to R.string.ui_nastroyki_uvedomleniy_android_093565e9,
        "Не задан момент проверки Twitch access token" to R.string.ui_ne_zadan_moment_proverki_twitch_access_token_8356703b,
        "Не задан срок token lease" to R.string.ui_ne_zadan_srok_token_lease_8bf0eda2,
...
        "Открыть профиль пользователя" to R.string.ui_otkryt_profil_polzovatelya_537d2c08,
        "Открыть страницу проекта" to R.string.ui_otkryt_stranicu_proekta_e988679b,
        "Отмена" to R.string.ui_otmena_0ec753be,
        "Отменить" to R.string.ui_otmenit_555ad1c0,
        "Отменить вход" to R.string.ui_otmenit_vhod_9e46cd45,
...
        "Поиск" to R.string.ui_poisk_6433b522,
        "Поиск эмоутов" to R.string.ui_poisk_emoutov_8ef5c86b,
        "Пока нет каналов" to R.string.ui_poka_net_kanalov_627d1600,
        "Показаны пользователи, замеченные в загруженном чате. Полный список Twitch доступен владельцу или модератору." to R.string.ui_pokazany_polzovateli_zamechennye_v_zagruzhennom_chat_c7cf5fc6,
        "Показать длительность трансляции" to R.string.ui_pokazat_dlitelnost_translyacii_29518e11,
...
        "Синхронизировать" to R.string.ui_sinhronizirovat_289c55eb,
        "Системное событие" to R.string.ui_sistemnoe_sobytie_460956a9,
        "Системные сообщения в чате" to R.string.ui_sistemnye_soobscheniya_v_chate_0b6abeb0,
        "Скрыть" to R.string.ui_skryt_10729118,
        "Скрыть полностью" to R.string.ui_skryt_polnostyu_fee6fce0,
...
        "Удалить" to R.string.ui_udalit_86ea33ae,
        "Удалить канал" to R.string.ui_udalit_kanal_d6694daf,
        "Удалить локальные отчёты?" to R.string.ui_udalit_lokalnye_otchety_091fabb5,
        "Удалить сообщение" to R.string.ui_udalit_soobschenie_8d8802a6,
        "Удалить сообщение Twitch" to R.string.ui_udalit_soobschenie_twitch_c65834ce,
...
